realworld-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    # Явно говорим контроллеру, что этот Ingress принадлежит ему
    kubernetes.io/ingress.class: nginx
    # Передаем реальные IP клиентов бэкенду
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
  # Мы НЕ указываем host, чтобы он принимал ЛЮБЫЕ запросы по IP
  - http:
      paths:
      - path: /api
        pathType: ImplementationSpecific # Попробуй этот тип для API
        backend:
          service:
            name: backend-service
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
